source/puppet/4.5/_registered_oids.md
The "ppRegCertExt" OID range contains the following OIDs:

Numeric ID              | Short Name         | Descriptive Name
------------------------|--------------------|--------------------------
1.3.6.1.4.1.34380.1.1.1 | `pp_uuid`          | Puppet Node UUID
1.3.6.1.4.1.34380.1.1.2 | `pp_instance_id`   | Puppet Node Instance ID
1.3.6.1.4.1.34380.1.1.3 | `pp_image_name`    | Puppet Node Image Name
1.3.6.1.4.1.34380.1.1.4 | `pp_preshared_key` | Puppet Node Preshared Key
1.3.6.1.4.1.34380.1.1.5 | `pp_cost_center`   | Puppet Node Cost Center Name
1.3.6.1.4.1.34380.1.1.6 | `pp_product`       | Puppet Node Product Name
1.3.6.1.4.1.34380.1.1.7 | `pp_project`       | Puppet Node Project Name
1.3.6.1.4.1.34380.1.1.8 | `pp_application`   | Puppet Node Application Name
1.3.6.1.4.1.34380.1.1.9 | `pp_service`       | Puppet Node Service Name
1.3.6.1.4.1.34380.1.1.10 | `pp_employee`     | Puppet Node Employee Name
1.3.6.1.4.1.34380.1.1.11 | `pp_created_by`   | Puppet Node `created_by` Tag
1.3.6.1.4.1.34380.1.1.12 | `pp_environment`  | Puppet Node Environment Name
1.3.6.1.4.1.34380.1.1.13 | `pp_role`         | Puppet Node Role Name
1.3.6.1.4.1.34380.1.1.14 | `pp_software_version` | Puppet Node Software Version
1.3.6.1.4.1.34380.1.1.15 | `pp_department`   | Puppet Node Department Name
1.3.6.1.4.1.34380.1.1.16 | `pp_cluster`      | Puppet Node Cluster Name
1.3.6.1.4.1.34380.1.1.17 | `pp_provisioner`  | Puppet Node Provisioner Name
1.3.6.1.4.1.34380.1.1.18 | `pp_region`       | Puppet Node Region Name
1.3.6.1.4.1.34380.1.1.19 | `pp_datacenter`   | Puppet Node Datacenter Name
1.3.6.1.4.1.34380.1.1.20 | `pp_zone`         | Puppet Node Zone Name
1.3.6.1.4.1.34380.1.1.21 | `pp_network`      | Puppet Node Network Name
1.3.6.1.4.1.34380.1.1.22 | `pp_securitypolicy` | Puppet Node Security Policy Name
1.3.6.1.4.1.34380.1.1.23 | `pp_cloudplatform` | Puppet Node Cloud Platform Name
1.3.6.1.4.1.34380.1.1.24 | `pp_apptier`      | Puppet Node Application Tier
1.3.6.1.4.1.34380.1.1.25 | `pp_hostname`     | Puppet Node Hostname